# Web-Image-Formateur

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
archive/python/: .gitignore  README.md  pyproject.toml
archive/python/src/: __main__.py  console.py
archive/python/src/convertor/: img_convertor.py
archive/python/src/interface/: img_interface.py  interface.py
archive/python/src/orchestrator/: img_orchestrator.py
archive/python/src/parser/: img_parser.py
src/: index.ts
src/cli/: helpers.ts  index.ts  options.ts
src/cli/commands/: config.ts  convert.ts  res-conv.ts  resize.ts
src/core/: config.ts  converter.ts  discover.ts  pipeline.ts  resizer.ts  settings.ts  types.ts
src/interactive/: index.ts
src/ui/: logger.ts
src/utils/: breakpoints.ts  formats.ts
tests/core/: converter.test.ts  discover.test.ts  pipeline.test.ts  resizer.test.ts  settings.test.ts
tests/utils/: breakpoints.test.ts  formats.test.ts
